# cleura-openstackclient

./: .gitignore  .yamllint  CHANGELOG.md  README.md  pyproject.toml  setup.py
.githooks/: commit-msg  post-commit  pre-commit  pre-push
.github/workflows/: build.yml  install.yml  release.yml  tox.yml
